<resources>
    <string name="app_name">IFoodClone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="access">Access</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="confirm">Confirm</string>

    <!-- menu -->
    <string name="new_product">New product</string>
    <string name="logout">Logout</string>
    <string name="configurations">Configurations</string>
    <string name="search">Search</string>

    <!-- company configurations -->
    <string name="company_name">Company name</string>
    <string name="company_category">Category</string>
    <string name="company_orders">Orders</string>
    <string name="company_deliverytime">Delivery time</string>
    <string name="company_deliverytax">Delivery tax</string>

    <!-- user config -->
    <string name="user_name">User name</string>
    <string name="user_address">User address</string>
    <string name="payment_method">Payment method</string>
    <string name="observation">Observation</string>
    <string name="items">1) Item 1 (1 x R$1.00)</string>

    <!-- product values -->
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_value">$ Product value</string>

    <!-- cart -->
    <string name="see_cart">See cart</string>
    <string name="quantity">Qt.</string>
    <string name="value">R$ 0.00</string>

</resources>