<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom"
        android:title="@string/new_product" />
    <item
        android:id="@+id/menuOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_assignment_24"
        app:showAsAction="ifRoom"
        android:title="@string/company_orders" />
    <item
        android:id="@+id/menuConfigurations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="never"
        android:title="@string/configurations" />
    <item
        android:id="@+id/menuLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="never"
        android:title="@string/logout" />
</menu>