<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always"
        android:title="@string/search" />

    <item
        android:id="@+id/menuConfigurations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="never"
        android:title="@string/configurations" />
    <item
        android:id="@+id/menuLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="never"
        android:title="@string/logout" />
</menu>