<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ea1d2c"
    tools:context=".activity.AuthenticationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/switchAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/switchAccessType"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAccessType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAccess"
        app:layout_constraintEnd_toStartOf="@+id/textViewCompany"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewUser"
        app:layout_constraintTop_toBottomOf="@+id/switchAuth" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/login"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/switchAuth"
        app:layout_constraintEnd_toStartOf="@+id/switchAuth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchAuth" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/switchAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switchAuth"
        app:layout_constraintTop_toTopOf="@+id/switchAuth" />

    <Button
        android:id="@+id/buttonAccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/access"
        android:theme="@style/buttonDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAccessType" />

    <TextView
        android:id="@+id/textViewCompany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/company"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/switchAccessType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switchAccessType"
        app:layout_constraintTop_toTopOf="@+id/switchAccessType" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/user"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/switchAccessType"
        app:layout_constraintEnd_toStartOf="@+id/switchAccessType"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchAccessType" />
</androidx.constraintlayout.widget.ConstraintLayout>