<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/adapterImageCompanyProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adapterTextCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/company_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adapterTextCompanyCategory"
        app:layout_constraintStart_toEndOf="@+id/adapterImageCompanyProfile"
        app:layout_constraintTop_toTopOf="@+id/adapterImageCompanyProfile"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/adapterTextCompanyCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/company_category"
        app:layout_constraintBottom_toBottomOf="@+id/adapterImageCompanyProfile"
        app:layout_constraintEnd_toStartOf="@+id/adapterTextCompanyDeliveryTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/adapterImageCompanyProfile"
        app:layout_constraintTop_toBottomOf="@+id/adapterTextCompanyName" />

    <TextView
        android:id="@+id/adapterTextCompanyDeliveryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/company_deliverytime"
        app:layout_constraintEnd_toStartOf="@+id/adapterTextCompanyDeliveryTax"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/adapterTextCompanyCategory"
        app:layout_constraintTop_toBottomOf="@+id/adapterTextCompanyName" />

    <TextView
        android:id="@+id/adapterTextCompanyDeliveryTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/company_deliverytax"
        app:layout_constraintStart_toEndOf="@+id/adapterTextCompanyDeliveryTime"
        app:layout_constraintTop_toBottomOf="@+id/adapterTextCompanyName" />

    <include
        layout="@layout/divisor"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adapterImageCompanyProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>