<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CompanyConfigurationsActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCompanyConfigSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/confirm"
        android:theme="@style/buttonDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanyDeliveryTax" />

    <EditText
        android:id="@+id/editTextCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/company_name"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCompanyProfile" />

    <EditText
        android:id="@+id/editTextCompanyCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/company_category"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanyName" />

    <EditText
        android:id="@+id/editTextCompanyDeliveryTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/company_deliverytime"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanyCategory" />

    <EditText
        android:id="@+id/editTextCompanyDeliveryTax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/company_deliverytax"
        android:inputType="number|numberDecimal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanyDeliveryTime" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewCompanyProfile"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />
</androidx.constraintlayout.widget.ConstraintLayout>